--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <meta property="og:image" content="">
   <meta property="og:image:alt" content="">
 
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" href="/icon.jpg" sizes="any">
+  <link rel="icon" href="/icon.jpg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="icon.jpg">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,7 +62,7 @@
   </div>
 
   <div class="menu-footer">
-    <p><img src="img/phone-icon.png" alt="Phone"> 076</p>
+    <p><img src="img/phone-icon.png" alt="Phone"> 077-9195271</p>
     <p><img src="img/location-icon.png" alt="Location"> Dhanuja Cafe, Arachchikanda, Hapugala, Wackwella, Galle</p>
   </div>
 </div>
