--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script src="js/script.js"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HVKYYZ3HY6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-HVKYYZ3HY6');
+</script>
 </body>
 
 </html>
